refatorando toda a aplicação