@@ -1,34 +1,37 @@
 package br.com.clinica.odontologica.servico;
 
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.modelmapper.ModelMapper;
+import org.springframework.stereotype.Service;
+
 import br.com.clinica.odontologica.dto.AtualizarPacienteDto;
 import br.com.clinica.odontologica.dto.BuscarPacientesDto;
 import br.com.clinica.odontologica.dto.CadastrarPacienteDto;
 import br.com.clinica.odontologica.entidade.Paciente;
 import br.com.clinica.odontologica.repositorio.PacienteRepositorio;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.Optional;
 
 @Service
+@RequiredArgsConstructor
 public class PacienteServico {
 
-    @Autowired
-    private  PacienteRepositorio pacienteRepositorio;
+    
+    private final PacienteRepositorio pacienteRepositorio;
 
-
+    private final ModelMapper modelMapper;
 
     public Paciente cadastrarPaciente(CadastrarPacienteDto cadastrarPacienteDto){
-        var cadastrar = new Paciente();
-        BeanUtils.copyProperties(cadastrarPacienteDto,cadastrar);
+        var cadastrar = modelMapper.map(cadastrarPacienteDto, Paciente.class);
         return pacienteRepositorio.save(cadastrar);
     }
 
     public List<BuscarPacientesDto> listarPacientes(){
-      return  pacienteRepositorio.findAll().stream().map(BuscarPacientesDto::new).toList();
+      return  pacienteRepositorio.findAll().stream().map(buscarPacientes ->modelMapper.
+    		  map(buscarPacientes, BuscarPacientesDto.class)).collect(Collectors.toList());
     }
 
     public Paciente buscarPorCpf(String cpf){
@@ -44,13 +47,18 @@ public class PacienteServico {
         return buscar.orElseThrow();
     }
 
-    public Paciente AtualizarPaciente(AtualizarPacienteDto atualizarPacienteDto){
-        var atualizar  = new Paciente();
-        BeanUtils.copyProperties(atualizarPacienteDto,atualizar);
-        return pacienteRepositorio.save(atualizar);
+    public Paciente AtualizarPaciente(AtualizarPacienteDto atualizarPacienteDto,Long id){
+     var atualizar = modelMapper.map(atualizarPacienteDto, Paciente.class);
+     atualizar.setId(id);
+        if (atualizar.getId()==null) {
+        	throw new NoSuchElementException();
+        }
+      
+       return pacienteRepositorio.save(atualizar);
     }
+    
     public void excluirPaciente(Long id){
         buscarPorId(id);
-        pacienteRepositorio.findById(id);
+        pacienteRepositorio.deleteById(id);
     }
 }
