@@ -1,38 +1,43 @@
 package br.com.clinica.odontologica.servico;
 
 
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.modelmapper.ModelMapper;
+import org.springframework.stereotype.Service;
+
 import br.com.clinica.odontologica.dto.AtualizarProntuarioDto;
 import br.com.clinica.odontologica.dto.BuscarProntuariosDto;
 import br.com.clinica.odontologica.dto.CadastrarProntuarioDto;
 import br.com.clinica.odontologica.entidade.Prontuario;
 import br.com.clinica.odontologica.repositorio.PacienteRepositorio;
 import br.com.clinica.odontologica.repositorio.ProntuarioRepositorio;
-import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.Optional;
+import lombok.RequiredArgsConstructor;
 
 @Service
+@RequiredArgsConstructor
 public class ProntuarioServico {
 
-    @Autowired
-    private ProntuarioRepositorio prontuarioRepositorio;
+    
+    private final ProntuarioRepositorio prontuarioRepositorio;
+    
+    private final PacienteRepositorio pacienteRepositorio;
+    
+    private final ModelMapper modelMapper;
 
-    @Autowired
-    private PacienteRepositorio pacienteRepositorio;
-
-    public Prontuario cadastrarProntuario(CadastrarProntuarioDto cadastrarProntuarioDto,Long pacienteId){
-        var prontuario = new Prontuario();
+    public Prontuario cadastrarProntuario(CadastrarProntuarioDto cadastrarProntuarioDto,Long pacienteId){        
         var paciente = pacienteRepositorio.findById(pacienteId).orElseThrow();
-        prontuario.setPaciente(paciente);
-        BeanUtils.copyProperties(cadastrarProntuarioDto,prontuario);
+        var prontuario = modelMapper.map(cadastrarProntuarioDto, Prontuario.class);
+        prontuario.setPaciente(paciente);        
         return prontuarioRepositorio.save(prontuario);
     }
 
     public List<BuscarProntuariosDto>buscarProntuarios(){
-     return prontuarioRepositorio.findAll().stream().map(BuscarProntuariosDto::new).toList();
+     return prontuarioRepositorio.findAll().stream().map(listar -> modelMapper
+    		 .map(listar, BuscarProntuariosDto.class))
+    		 .collect(Collectors.toList());
     }
 
     public Prontuario buscarPorId(Long id){
@@ -40,10 +45,9 @@ public class ProntuarioServico {
         return buscar.orElseThrow();
     }
 
-    public Prontuario atualizarProntuario(AtualizarProntuarioDto atualizarProntuarioDto){
-        var atualizar = new Prontuario();
-
-        BeanUtils.copyProperties(atualizarProntuarioDto,atualizar);
+    public Prontuario atualizarProntuario(AtualizarProntuarioDto atualizarProntuarioDto,Long id){     
+       var atualizar = modelMapper.map(atualizarProntuarioDto, Prontuario.class);
+       atualizar.setId(id);
         return prontuarioRepositorio.save(atualizar);
 
     }
